[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menu/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=3]
[ext_resource path="res://theme/arrow.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "move"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("ArrowLeft:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ArrowRight:rect_position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 380, -0.25, 0, 0.25, 0, 370, -0.25, 0, 0.25, 0, 380, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ArrowLeft:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.588235, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ArrowRight:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.588235, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 135 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 1 )]

[node name="SceneUI" type="Control" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.998662 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0324831
margin_right = 0.0324707
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/SceneUI"]
margin_right = 40.0
margin_bottom = 29.0
theme = ExtResource( 2 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowLeft" type="TextureRect" parent="CanvasLayer/SceneUI"]
margin_right = 100.0
margin_bottom = 270.0
mouse_filter = 2
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArrowRight" type="TextureRect" parent="CanvasLayer/SceneUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_bottom = 270.0
mouse_filter = 2
texture = ExtResource( 4 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/SceneUI"]
anims/move = SubResource( 1 )

[node name="Left" type="Area2D" parent="CanvasLayer"]
position = Vector2( 50, 135 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Left"]
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="CanvasLayer"]
position = Vector2( 430, 135 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Right"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 240, 135 )
current = true
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/AuroraBorealis" to="." method="_on_scene_selected" flags=3 binds= [ "aurora_borealis" ]]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Beach" to="." method="_on_scene_selected" flags=3 binds= [ "beach" ]]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/ForestSnowy" to="." method="_on_scene_selected" flags=3 binds= [ "forest_snowy" ]]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/ForestSunny" to="." method="_on_scene_selected" flags=3 binds= [ "forest_sunny" ]]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Space" to="." method="_on_scene_selected" flags=3 binds= [ "space" ]]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Temple" to="." method="_on_scene_selected" flags=3 binds= [ "temple" ]]
[connection signal="pressed" from="CanvasLayer/SceneUI/Button" to="." method="_on_back_pressed" flags=3]
[connection signal="mouse_entered" from="CanvasLayer/Left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Left" to="." method="_on_left_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/Right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Right" to="." method="_on_right_mouse_exited"]

[editable path="CanvasLayer/Menu"]
